fix: display Select component input field in white color for dark mode

--- a/src/index.css
+++ b/src/index.css
@@ -153,7 +153,7 @@ body {
 }
 
 .chakra-ui-dark .inner__input {
-  color: #fff;
+  color: #fff !important;
 }
 
 .chakra-ui-dark .inner__placeholder {
